Don't bother spending time to root the jsval if it's a string -- in this case we make a copy of the string data anyway, so we don't need the jsval.  Bug 311582, r+sr=jst